--- a/.github/workflows/docker-build-push-local-registry.yml
+++ b/.github/workflows/docker-build-push-local-registry.yml
@@ -6,9 +6,6 @@ on:
 
       - "main"
 
-
-
-
 jobs:
   docker:
     runs-on: ubuntu-latest
@@ -38,7 +35,7 @@ jobs:
       - name: Install kubectl
         uses: azure/setup-kubectl@v3
         with:
-          version: 'default' # default is latest stable
+          version: latest # default is latest stable
         id: install
       - name: Install Minikube
         run: |
