--- a/.github/workflows/docker-build-push-local-registry.yml
+++ b/.github/workflows/docker-build-push-local-registry.yml
@@ -7,12 +7,16 @@ on:
       - "main"
 jobs:
   docker-registry:
+    timeout-minutes: 120
     runs-on: ubuntu-latest
     services:
       registry:
         image: registry:2
         ports:
           - 5000:5000
+  docker-build-and-push:
+    timeout-minutes: 120
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -31,6 +35,10 @@ jobs:
       - name: Inspect
         run: |
           docker buildx imagetools inspect localhost:5000/name/app:latest
+  install-minikube:
+    timeout-minutes: 120
+    runs-on: ubuntu-latest
+    steps:    
       - name: Check if Kubernetes cluster exists
         id: check_cluster
         run: |
