--- a/.github/workflows/docker-build-push-local-registry.yml
+++ b/.github/workflows/docker-build-push-local-registry.yml
@@ -1,6 +1,4 @@
-name: ci
-
-
+name: RevealSecurity CI / CD
 on:
   push:
     branches:
@@ -14,13 +12,6 @@ jobs:
         image: registry:2
         ports:
           - 5000:5000
-    steps:
-      - name: registry-up
-        run: |
-          echo 'registry-up'
-  docker-build-and-push:
-    timeout-minutes: 120
-    runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -39,31 +30,11 @@ jobs:
       - name: Inspect
         run: |
           docker buildx imagetools inspect localhost:5000/name/app:latest
-  install-minikube:
-    timeout-minutes: 120
-    runs-on: ubuntu-latest
-    steps:    
-      - name: Check if Kubernetes cluster exists
-        id: check_cluster
+      - name: Install Minikube
         run: |
-          if kubectl get nodes >/dev/null 2>&1; then
-            echo "::set-output name=cluster_exists::true"
-          else
-            echo "::set-output name=cluster_exists::false"
-          fi
-      #- name: Install Minikube
-      #  if: steps.check_cluster.outputs.cluster_exists == 'false'
-      #  run: |
-        #  curl -LO https://storage.googleapis.com/minikube/releases/latest/minikube-linux-amd64
-        #  sudo install minikube-linux-amd64 /usr/local/bin/minikube
-         # minikube start
-       #   kubectl get po -A
-      - uses: Azure/k8s-deploy@v5
-        with:
-           namespace: 'myapp'
-           manifests: |
-             dir/manifestsDirectory
-           images: localhost:5000/name/app:latest
-
-
+          curl -LO https://storage.googleapis.com/minikube/releases/latest/minikube-linux-amd64
+          sudo install minikube-linux-amd64 /usr/local/bin/minikube
+          minikube start
+          kubectl get po -A
+      
 
