--- a/.github/workflows/docker-build-push-local-registry.yml
+++ b/.github/workflows/docker-build-push-local-registry.yml
@@ -15,29 +15,36 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+      
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
+      
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
         with:
           driver-opts: network=host
+      
       - name: Build and push to local registry
         uses: docker/build-push-action@v5
         with:
           context: .
           push: true
           tags: localhost:5000/name/app:latest
+      
       - name: Inspect
         run: |
           docker buildx imagetools inspect localhost:5000/name/app:latest
+      
       - name: Install Minikube
         run: |
           curl -LO https://storage.googleapis.com/minikube/releases/latest/minikube-linux-amd64
           sudo install minikube-linux-amd64 /usr/local/bin/minikube
           minikube start
-          #kubectl get po -A
+          
       - name: Deploy To K8S
         run: |
           kubectl apply -f deployment.yaml
       
-
+      - name: Validate Service up
+        run: |
+          curl localhost:80
