--- a/.github/workflows/docker-build-push-local-registry.yml
+++ b/.github/workflows/docker-build-push-local-registry.yml
@@ -47,5 +47,11 @@ jobs:
       
       - name: Validate Service up
         run: |
+          sleep 10
           kubectl get deployments -A
+          sleep 10
+          kubectl get deployments -A
+          sleep 10
+          kubectl get po -A
+          
           curl localhost:80
