--- a/.github/workflows/docker-build-push-local-registry.yml
+++ b/.github/workflows/docker-build-push-local-registry.yml
@@ -52,6 +52,7 @@ jobs:
           kubectl apply -f deployment.yaml
       
       - name: Validate Service up
+        run: |
           sleep 10
           kubectl get deployments -A
           sleep 10
