--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -44,7 +44,7 @@ jobs:
       - name: Create Registry Secret
         run: |
           kubectl create secret generic  docker-registry-secret \
-          --from-file=.dockerconfigjson='~/.docker/config.json' \
+          --from-file=.dockerconfigjson="~/.docker/config.json" \ 
           --type=kubernetes.io/dockerconfigjson
           
       - name: Deploy To K8S
