--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -47,7 +47,7 @@ jobs:
           #kubectl create secret docker-registry my-secret --from-file=.dockerconfigjson=path/to/.docker/config.json
 
           kubectl create secret generic regcred \
-          --from-file=.dockerconfigjson=~/.docker/config.json 
+          --from-file=.dockerconfigjson="~/.docker/config.json" 
           #\ --type=kubernetes.io/dockerconfigjson
           
       - name: Deploy To K8S
