--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -43,6 +43,7 @@ jobs:
           
       - name: Create Registry Secret
         run: |
+          pwd
           cat ~/.docker/config.json
           kubectl create secret docker-registry my-secret --from-file=.dockerconfigjson=~/.docker/config.json
 
