--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -52,6 +52,7 @@ jobs:
       - name: Validate Service up
         run: |
           sleep 10
+          kubectl describe pod 
           kubectl get deployments -A
           sleep 10
           kubectl get deployments -A
