--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -29,11 +29,11 @@ jobs:
         with:
           context: .
           push: true
-          tags: localhost:5000/name/app:latest
+          tags: 127.0.0.1:5000/name/app:latest
       
       - name: Inspect
         run: |
-          docker buildx imagetools inspect localhost:5000/name/app:latest
+          docker buildx imagetools inspect 127.0.0.1:5000/name/app:latest
       
       - name: Install Minikube
         run: |
