--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -43,7 +43,10 @@ jobs:
           
       - name: Create Registry Secret
         run: |
-          kubectl create secret docker-registry my-secret --from-file=.dockerconfigjson=/home/runner/.docker/config.json
+          kubectl create secret generic regcred \
+          --from-file=.dockerconfigjson=/home/runner/to/.docker/config.json \
+          --type=kubernetes.io/dockerconfigjson
+          #kubectl create secret docker-registry my-secret --from-file=.dockerconfigjson=/home/runner/.docker/config.json
         
       - name: Deploy To K8S
         run: |
