--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -46,6 +46,7 @@ jobs:
           kubectl create secret generic regcred \
           --from-file=.dockerconfigjson=/home/runner/.docker/config.json \
           --type=kubernetes.io/dockerconfigjson
+           docker pull "127.0.0.1:5000/name/app:latest"
           #kubectl create secret docker-registry my-secret --from-file=.dockerconfigjson=/home/runner/.docker/config.json
         
       - name: Deploy To K8S
