--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -35,15 +35,21 @@ jobs:
         run: |
           docker buildx imagetools inspect 127.0.0.1:5000/name/app:latest
           
+      - name: Inspect Hosts    
+        run: |
+          cat /etc/hosts
+          
       - name: Install Minikube
         run: |
           curl -LO https://storage.googleapis.com/minikube/releases/latest/minikube-linux-amd64
           sudo install minikube-linux-amd64 /usr/local/bin/minikube
           minikube start --insecure-registry 127.0.0.1:5000
+      
       - name: Replace daemon file
         run: |  
           sudo rm -f /etc/docker/daemon.json
           sudo cp daemon.json /etc/docker/
+      
       - name: Create Registry Secret
         run: |
           kubectl create secret generic regcred \
