--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -13,7 +13,7 @@ jobs:
 
     - name: Login Docker Hub
       run: |
-        docker login  -u "${{ secrets.dockerhubusername }}" -p "${{ secrets.dockerhubpassword }}" docker.io
+        docker login  -u "boazhalter" -p "${{ secrets.dockerhubpassword }}" docker.io
     
     - name: Build Docker Image
       run: |
