--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -28,17 +28,13 @@ jobs:
         curl -LO https://storage.googleapis.com/minikube/releases/latest/minikube-linux-amd64
         sudo install minikube-linux-amd64 /usr/local/bin/minikube
         minikube start 
+
       
-    - name: Replace daemon file
-      run: |  
-        sudo rm -f /etc/docker/daemon.json
-        sudo cp daemon.json /etc/docker/
-      
-    - name: Create Registry Secret
-      run: |
-        kubectl create secret generic regcred \
-        --from-file=.dockerconfigjson=/home/runner/.docker/config.json \
-        --type=kubernetes.io/dockerconfigjson
+   # - name: Create Registry Secret
+   #   run: |
+   #     kubectl create secret generic regcred \
+   #     --from-file=.dockerconfigjson=/home/runner/.docker/config.json \
+   #     --type=kubernetes.io/dockerconfigjson
           
     - name: Deploy To K8S
       run: |
