--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -40,5 +40,7 @@ jobs:
         sleep 20
         kubectl describe pod
         kubectl get pods --selector="app=nginx-php" --output=wide
+        kubectl get pods --selector="app=nginx-php" --template={{.status.podIP}}
+        kubectl get pod --selector="app=nginx-php" --template={{.status.podIP}}
         POD_HOST=`kubectl get pod --selector="app=nginx-php" --template={{.status.podIP}}`
         echo $POD_HOST
