--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -38,9 +38,10 @@ jobs:
     - name: Validate Service up
       run: |
         sleep 20
+        kubectl get pod  --template '{{.status.podIP}}'
         kubectl describe pod
         kubectl get pods --selector="app=nginx-php" --output=wide
         kubectl get pods --selector="app=nginx-php" --template={{.status.podIP}}
         kubectl get pod --selector="app=nginx-php" --template={{.status.podIP}}
-        POD_HOST=`kubectl get pod --selector="app=nginx-php" --template={{.status.podIP}}`
+        POD_HOST=`kubectl get pod --template={{.status.podIP}}`
         echo $POD_HOST
