--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -39,10 +39,6 @@ jobs:
       run: |
         sleep 20
         podName=`kubectl get pods --no-headers -o custom-columns=":metadata.name"`
-        kubectl get pod $podName --template '{{.status.podIP}}'
-        kubectl describe pod
-        kubectl get pods --selector="app=nginx-php" --output=wide
-        kubectl get pods --selector="app=nginx-php" --template={{.status.podIP}}
-        kubectl get pod --selector="app=nginx-php" --template={{.status.podIP}}
-        POD_HOST=`kubectl get pod --template={{.status.podIP}}`
+        POD_HOST=`kubectl get pod $podName --template '{{.status.podIP}}'`
         echo $POD_HOST
+        kubectl describe services nginx-php-service
