--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -41,5 +41,5 @@ jobs:
         podName=`kubectl get pods --no-headers -o custom-columns=":metadata.name"`
         POD_HOST=`kubectl get pod $podName --template '{{.status.podIP}}'`
         echo $POD_HOST
-        NODE_PORT=`kubectl describe services nginx-php-service | grep "NodePort"`
-        curl $POD_HOST:$NODE_PORT
+        kubectl describe services nginx-php-service | grep "NodePort"
+        #curl $POD_HOST:$NODE_PORT
