--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -44,4 +44,5 @@ jobs:
         NODE_PORT=`kubectl describe services nginx-php-service | grep "NodePort:"  | awk '{print $3}'`
         echo ${NODE_PORT::-4}
         NODE_PORT=${NODE_PORT::-4}
+        echo $NODE_PORT
         curl $POD_HOST:${NODE_PORT}
