--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -28,14 +28,14 @@ jobs:
         curl -LO https://storage.googleapis.com/minikube/releases/latest/minikube-linux-amd64
         sudo install minikube-linux-amd64 /usr/local/bin/minikube
         minikube start 
-        helm ls
+      
           
     - name: Deploy To K8S
       run: |
         helm repo add sickhub https://sickhub.github.io/charts
         helm repo update
         helm search repo sickhub
-        helm upgrade --create-namespace --namespace test --install --values values.yaml my-release sickhub/nginx-phpfpm
+        helm upgrade --create-namespace --namespace test --install --values https://raw.githubusercontent.com/SickHub/charts/main/sickhub/nginx-phpfpm/values.yaml  my-release sickhub/nginx-phpfpm
         kubectl apply -f deployment.yaml
         kubectl expose deployment nginx-php-deployment --type=NodePort --name=nginx-php-service
 
