--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -61,10 +61,12 @@ jobs:
 
     - name: Validate Chart Deployed
       run: |
-         export POD_NAME=$(kubectl get pods --namespace test -l "app.kubernetes.io/name=nginx-phpfpm-nginx,app.kubernetes.io/instance=my-release" -o jsonpath="{.items[0].metadata.name}")
-         export CONTAINER_PORT=$(kubectl get pod --namespace test $POD_NAME -o jsonpath="{.spec.containers[0].ports[0].containerPort}")
-         echo "Visit http://127.0.0.1:8080 to use your application"
-         kubectl --namespace test port-forward $POD_NAME 8080:$CONTAINER_PORT
+         kubectl get pods --namespace test -o wiide
+         #export POD_NAME=$(kubectl get pods --namespace test -l "app.kubernetes.io/name=nginx-phpfpm-nginx,app.kubernetes.io/instance=my-release" -o jsonpath="{.items[0].metadata.name}")
+         #export CONTAINER_PORT=$(kubectl get pod --namespace test $POD_NAME -o jsonpath="{.spec.containers[0].ports[0].containerPort}")
+         #echo "Visit http://127.0.0.1:8080 to use your application"
+         #kubectl --namespace test port-forward $POD_NAME 8080:$CONTAINER_PORT
+         #curl --connect-timeout 10 -kvi "http://192.168.49.2:$NODE_PORT"
 
         
 
