--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -29,7 +29,7 @@ jobs:
       run: |
          kubectl get pods --namespace test -o wide
          sleep 15
-         kubectl describe pods --namespace test -o wide
+         kubectl describe pod --namespace test -o wide
          #export POD_NAME=$(kubectl get pods --namespace test -l "app.kubernetes.io/name=nginx-phpfpm-nginx,app.kubernetes.io/instance=my-release" -o jsonpath="{.items[0].metadata.name}")
          #export CONTAINER_PORT=$(kubectl get pod --namespace test $POD_NAME -o jsonpath="{.spec.containers[0].ports[0].containerPort}")
          #echo "Visit http://127.0.0.1:8080 to use your application"
