--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -32,6 +32,9 @@ jobs:
          kubectl describe pod --namespace test 
          sleep 15
          kubectl describe pod --namespace test 
+
+         kubectl get --all 
+
          #export POD_NAME=$(kubectl get pods --namespace test -l "app.kubernetes.io/name=nginx-phpfpm-nginx,app.kubernetes.io/instance=my-release" -o jsonpath="{.items[0].metadata.name}")
          #export CONTAINER_PORT=$(kubectl get pod --namespace test $POD_NAME -o jsonpath="{.spec.containers[0].ports[0].containerPort}")
          #echo "Visit http://127.0.0.1:8080 to use your application"
