--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -33,12 +33,18 @@ jobs:
          sleep 15
          kubectl describe pod --namespace test 
          kubectl get all,cm,secret,ing -A
-
+         podName=`kubectl get pods -n test--no-headers -o custom-columns=":metadata.name"`
+         POD_HOST=`kubectl get pod $podName --template '{{.status.podIP}}'`
+         echo $POD_HOST
+         NODE_PORT=`kubectl describe services my-release-nginx-phpfpm-nginx | grep "NodePort:"  | awk '{print $3}'`
+         NODE_PORT=${NODE_PORT::-4}
+         echo $NODE_PORT
+         #service/my-release-nginx-phpfpm-nginx 
          #export POD_NAME=$(kubectl get pods --namespace test -l "app.kubernetes.io/name=nginx-phpfpm-nginx,app.kubernetes.io/instance=my-release" -o jsonpath="{.items[0].metadata.name}")
          #export CONTAINER_PORT=$(kubectl get pod --namespace test $POD_NAME -o jsonpath="{.spec.containers[0].ports[0].containerPort}")
          #echo "Visit http://127.0.0.1:8080 to use your application"
          #kubectl --namespace test port-forward $POD_NAME 8080:$CONTAINER_PORT
-         #curl --connect-timeout 10 -kvi "http://192.168.49.2:$NODE_PORT"
+         curl --connect-timeout 10 -kvi "http://192.168.49.2:$NODE_PORT"
 
   deploy-application:
     timeout-minutes: 10
