--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -28,17 +28,17 @@ jobs:
     - name: Validate Chart Deployed
       run: |
          kubectl get pods --namespace test -o wide
-         sleep 15
-         kubectl describe pod --namespace test 
-         sleep 15
-         kubectl describe pod --namespace test 
-         kubectl get all,cm,secret,ing -A
+         sleep 30
+         #kubectl describe pod --namespace test 
+         #kubectl describe pod --namespace test 
+         #kubectl get all,cm,secret,ing -A
          podName=`kubectl get pods -n test--no-headers -o custom-columns=":metadata.name"`
+         echo "podName: $podName"
          POD_HOST=`kubectl get pod $podName --template '{{.status.podIP}}'`
-         echo $POD_HOST
+         echo "POD_HOST: $POD_HOST"
          NODE_PORT=`kubectl describe services my-release-nginx-phpfpm-nginx | grep "NodePort:"  | awk '{print $3}'`
          NODE_PORT=${NODE_PORT::-4}
-         echo $NODE_PORT
+         echo "NODE_PORT: $NODE_PORT"
          #service/my-release-nginx-phpfpm-nginx 
          #export POD_NAME=$(kubectl get pods --namespace test -l "app.kubernetes.io/name=nginx-phpfpm-nginx,app.kubernetes.io/instance=my-release" -o jsonpath="{.items[0].metadata.name}")
          #export CONTAINER_PORT=$(kubectl get pod --namespace test $POD_NAME -o jsonpath="{.spec.containers[0].ports[0].containerPort}")
